// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.14.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "Function": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.14.1",
                    },
                    "id": "Asset",
                    "path": "cdktf-stack/wing-app/Function/Asset",
                  },
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "11.0.4",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/Function/Bucket",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "11.0.4",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Function/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "11.0.4",
                    },
                    "id": "IamRole",
                    "path": "cdktf-stack/wing-app/Function/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicy",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "11.0.4",
                    },
                    "id": "S3Object",
                    "path": "cdktf-stack/wing-app/Function/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.0.25",
                },
                "id": "Function",
                "path": "cdktf-stack/wing-app/Function",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "11.0.4",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.25",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.14.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.14.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BOOM\\": \\"BAM\\",
            \\"FOO\\": \\"BAR\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.14.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "Function": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.14.1",
                    },
                    "id": "Asset",
                    "path": "cdktf-stack/wing-app/Function/Asset",
                  },
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "11.0.4",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/Function/Bucket",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "11.0.4",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Function/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "11.0.4",
                    },
                    "id": "IamRole",
                    "path": "cdktf-stack/wing-app/Function/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicy",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "11.0.4",
                    },
                    "id": "S3Object",
                    "path": "cdktf-stack/wing-app/Function/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.0.25",
                },
                "id": "Function",
                "path": "cdktf-stack/wing-app/Function",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "11.0.4",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.25",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.14.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.14.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
